Сделана верстка сайта

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header class="header" data-header>
+  <header class="header" data-headeк>
     <div class="container">
 
       <a href="#" class="logo">
