- стили теперь находятся в папке styles; - главный файл css  main.css; - исправлена ссылка на подключение css файла; - исправлена VIEW WORK на строчное написание.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./styles/main.css">
   <title>Document</title>
 </head>
 
 <body>
-  <header class="header" data-headeк>
+  <header class="header" data-header>
     <div class="container">
 
       <a href="#" class="logo">
@@ -69,7 +69,7 @@
             Ultrices lorem non feugiat egestas amet.</b>
         </p>
         <div class="category">Website Design</div>
-        <button>VIEW WORK</button>
+        <button>View work</button>
       </div>
       <img src="images/work1.png" alt="Real estate Template">
 
@@ -85,7 +85,7 @@
             Ultrices lorem non feugiat egestas amet.</b>
         </p>
         <div class="category">Website Design</div>
-        <button>VIEW WORK</button>
+        <button>View work</button>
       </div>
       <img src="images/work1.png" alt="Real estate Template">
 
@@ -101,7 +101,7 @@
             Ultrices lorem non feugiat egestas amet.</b>
         </p>
         <div class="category">Website Design</div>
-        <button>VIEW WORK</button>
+        <button>View work</button>
       </div>
       <img src="images/work1.png" alt="Real estate Template">
 
@@ -117,7 +117,7 @@
             Ultrices lorem non feugiat egestas amet.</b>
         </p>
         <div class="category">Website Design</div>
-        <button>VIEW WORK</button>
+        <button>View work</button>
       </div>
       <img src="images/work1.png" alt="Real estate Template">
 
